[gd_scene load_steps=6 format=3 uid="uid://yp2thojcml5h"]

[ext_resource type="Script" uid="uid://c2ftr3dvpi75p" path="res://scripts/combatants/BaseCombatant.gd" id="1_fjkbl"]
[ext_resource type="Texture2D" uid="uid://nh32y87hcke5" path="res://icon.svg" id="2_nc4eu"]
[ext_resource type="PackedScene" uid="uid://b0qk0vn81d0kp" path="res://scenes/combatants/LayeredHealthBar.tscn" id="3_bf3nk"]

[sub_resource type="Animation" id="Animation_0d3kb"]
resource_name = "attack"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Visible/Sprite:offset")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.5),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(30, 0), Vector2(0, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_htloy"]
_data = {
&"attack": SubResource("Animation_0d3kb")
}

[node name="BaseCombatant" type="Control"]
custom_minimum_size = Vector2(200, 144)
layout_mode = 3
anchors_preset = 0
offset_right = 200.0
offset_bottom = 144.0
script = ExtResource("1_fjkbl")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_htloy")
}

[node name="Visible" type="Control" parent="."]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Sprite" type="Sprite2D" parent="Visible"]
position = Vector2(64, 48)
texture = ExtResource("2_nc4eu")

[node name="LayeredHealthBar" parent="Visible/Sprite" instance=ExtResource("3_bf3nk")]

[node name="SelectionButton" type="Button" parent="Visible/Sprite"]
self_modulate = Color(1, 1, 1, 0)
offset_left = -67.0
offset_top = -64.0
offset_right = 69.0
offset_bottom = 64.0

[node name="IncomingDamage" type="Control" parent="Visible"]
layout_mode = 3
anchors_preset = 0
offset_left = -40.0
offset_top = -64.0
offset_right = 168.0
offset_bottom = -40.0

[node name="TextureRect" type="TextureRect" parent="Visible/IncomingDamage"]
layout_mode = 0
offset_left = 80.0
offset_top = -16.0
offset_right = 128.0
offset_bottom = 32.0
texture = ExtResource("2_nc4eu")
expand_mode = 1

[node name="IncomingDamageAmount" type="Label" parent="Visible/IncomingDamage"]
layout_mode = 0
offset_left = 104.0
offset_top = 16.0
offset_right = 144.0
offset_bottom = 39.0
text = "15"

[node name="FadeContainer" type="Node2D" parent="Visible"]
position = Vector2(64, -96)

[node name="Block" type="Sprite2D" parent="Visible"]
visible = false
self_modulate = Color(0.188235, 0.188235, 0.188235, 1)
position = Vector2(32, 168)
scale = Vector2(0.25, 0.25)
texture = ExtResource("2_nc4eu")
metadata/_edit_group_ = true

[node name="BlockAmount" type="Label" parent="Visible/Block"]
offset_left = -64.0
offset_top = -64.0
offset_right = 64.0
offset_bottom = 64.0
theme_override_font_sizes/font_size = 48
text = "999"
horizontal_alignment = 1
vertical_alignment = 1

[node name="StatusContainer" type="GridContainer" parent="Visible"]
layout_mode = 0
offset_left = -16.0
offset_top = 144.0
offset_right = 24.0
offset_bottom = 184.0
columns = 6

[node name="CustomUIContainer" type="Control" parent="Visible"]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
